--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -690,6 +690,10 @@ yb {
     cluster_membership {
       enabled = true
     }
+    leaderless_tablets {
+      timeout = 5m
+      enabled = true
+    }
   }
 
   health {
