[BACKPORT 2.20][PLAT-13563] Disable kamon status page module to avoid security concerns with that
Summary:
Disable kamon status page module to avoid security concerns with that

Original diff: https://phorge.dev.yugabyte.com/D34194

Test Plan: Tested manually

Reviewers: anijhawan

Reviewed By: anijhawan

Subscribers: yugaware

Tags: #jenkins-ready

Differential Revision: https://phorge.dev.yugabyte.com/D34223

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -1181,9 +1181,14 @@ runtime_config {
   data_validation.enabled = true
 }
 
-kamon.prometheus {
-  embedded-server {
-    hostname = "localhost"
-    port = 9095
+kamon {
+  prometheus {
+    embedded-server {
+      hostname = "localhost"
+      port = 9095
+    }
+  }
+  modules {
+    status-page.enabled = false
   }
 }
