[BACKPORT 2024.1][PLAT-13490][PLAT-13491] Sync remote instances even during version mismatch
Summary:
Original commit: 5ef9b0c9b657ca7c7b596292fb7e52ea98a36614 / D34125
With changes to send backup code sending backups to followers of lower YBA version is now an error, which meant we weren't syncing the config. As part of config sync we generate version mismatch events. If we try to sync the config to all instances we will both update the config correctly so standby shows correct state even when it is a lower version and the active correctly fires alert to upgrade standby.

moving backup update code when we send backup

simplifying code

Test Plan: Setup HA, upgrade standby, then promote. Ensure that alert fires and config looks correct on standby.

Reviewers: dshubin, sanketh

Reviewed By: sanketh

Subscribers: yugaware

Tags: #jenkins-ready

Differential Revision: https://phorge.dev.yugabyte.com/D34287

--- a/managed/src/main/resources/alert/alert_templates.yml
+++ b/managed/src/main/resources/alert/alert_templates.yml
@@ -121,8 +121,8 @@ templates:
         {{ if $index }},{{ end }}{{ $element.Labels.instance_addr }}{{ end}}
     annotations:
       summary: >-
-        Standby instance(s) '{{$labels.affected_instance_addrs}}' on higher version than current
-        active. Please upgrade active YBA to match version.
+        Standby instance(s) '{{$labels.affected_instance_addrs}}' on different version than current
+        active. Please upgrade lower version YBA to match.
 
   BACKUP_FAILURE:
     name: Backup Failure
