[BACKPORT 2.20][PLAT-10551] Enable OS Patching
Summary:
This diff enables the OS Patching runtime flag by default.

Depends on - D34184
Original Commit - https://phorge.dev.yugabyte.com/rYBDB851f6bdced8fa406fd3dac021f5c67152d0fd2c9

Test Plan: iTest pipeline

Reviewers: #yba-api-review!, amalyshev, nbhatia

Reviewed By: amalyshev

Subscribers: yugaware

Tags: #jenkins-ready

Differential Revision: https://phorge.dev.yugabyte.com/D34403

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -185,7 +185,7 @@ yb {
       # Keeping the image bundle validations off by default
       # Will turn this on once we make image bundle as first class
       # object in provider.
-      disable_image_bundle_validations = true
+      disable_image_bundle_validations = false
     }
   }
 
@@ -194,7 +194,7 @@ yb {
     allow_used_provider_edit = ${yb.cloud.enabled}
     # This can contain comma separated values, like "/,/tmp,"
     monitored_mount_roots = "/"
-    vm_os_patching = false
+    vm_os_patching = true
   }
 
   universe {
@@ -598,7 +598,6 @@ yb {
     blacklist_leaders = true
     blacklist_leader_wait_time_ms = 60000
     max_follower_lag_threshold_ms = 60000
-    vmImage = ${yb.cloud.enabled}
     allow_downgrades=false
     allow_downgrades=${?YB_UPGRADE_ALLOW_DOWNGRADES}
     single_connection_ysql_upgrade=false
