[PLAT-13673] Add a java equivalent for run_node_action.py to run node actions when node-agent is available
Summary:
This diff contains the below changes.

1. Improvement on the error reporting for python rpc to not propapage the internal grpc stacktrace.
2. Replace some of the frequent calls to run_node_action.py with the Java client when node-agent is available.
3. Improvement in the retries for the Java client as it is going to be used frequently (currently only used for node-agent upgrades).
4. Feature flag to disable the feature anytime if it has issues or is not desired.
5. Cleanups.

One performance observation on support bundle - over python, it takes about a minute. Over java-client, it takes about 15secs! The final file sizes are the same.

Test Plan:
1. Create a universe.
2. Wait for health checks to run and make sure the python processes are not spawned. (Also checked the file permissions by deleting node_health.py and metrics collector scripts and restarting YBA).
3. Run support bundle and check the tar file to make sure the log files are present.
4. Bring a node down and run support bundle to make sure it runs fine skipping the down node.
5. Disable the feature flag and make sure the current way of running python process still works.

TODO: A couple of methods in NodeUniverseManager.java are skipped as it needs more testing.

Reviewers: amalyshev, svarshney, skurapati, sanketh, nbhatia

Reviewed By: amalyshev, skurapati

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D34497

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -1148,9 +1148,14 @@ yb {
       ssh_timeout = 10
       vm_max_map_count = 262144
     }
+
     releases {
         # Path to the node-agent releases.
         path = "/opt/yugabyte/node-agent/releases"
+    }
+
+    node_action {
+        use_java_client = true
     }
   }
 
