[PLAT-13662] enabling release redesign by default
Summary: enable release design

Test Plan: itest and all previous manual testing

Reviewers: muthu, anijhawan, rmadhavan, smuruganandham

Reviewed By: anijhawan, rmadhavan

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D34044

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -663,7 +663,7 @@ yb {
     num_releases_to_keep_default = 3
     num_releases_to_keep_cloud = 2
     download_helm_chart_http_timeout = 60s
-    use_redesign = false
+    use_redesign = true
     artifacts {
       upload_path = "/opt/yugabyte/upload/release_artifacts"
     }
